[gd_scene load_steps=30 format=2]

[ext_resource path="res://sounds/music/bckg_music_forest.mp3" type="AudioStream" id=1]
[ext_resource path="res://sounds/music/bckg_ambient_forest.mp3" type="AudioStream" id=2]
[ext_resource path="res://src/actors/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/monogram.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/levels/levelArea.gd" type="Script" id=5]
[ext_resource path="res://sounds/stair.mp3" type="AudioStream" id=6]
[ext_resource path="res://artwork/room.png" type="Texture" id=8]
[ext_resource path="res://src/prefabs/note.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/dialog.png" type="Texture" id=10]
[ext_resource path="res://src/levels/earlyArea.gd" type="Script" id=11]
[ext_resource path="res://fonts/progresspixel-bold.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://src/shaders/vignette.shader" type="Shader" id=13]
[ext_resource path="res://src/prefabs/menus/ExitToMainButton.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/prefabs/menus/ResumeButton.tscn" type="PackedScene" id=15]
[ext_resource path="res://sounds/click_menu.wav" type="AudioStream" id=16]
[ext_resource path="res://src/levels/Pause.gd" type="Script" id=17]
[ext_resource path="res://src/levels/miniGame.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/shaders/vignette.png" type="Texture" id=19]
[ext_resource path="res://src/actors/grandma/grandma.tscn" type="PackedScene" id=20]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

const vec3 color = vec3(0, 0, 0);

void fragment() {
	COLOR = vec4(color, 1);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="Theme" id=3]
/colors/ = Color( 0, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 13 )
shader_param/debanding_dither = 0.0
shader_param/blur = 0.1
shader_param/vignette_darkness = 0.06
shader_param/vignette = ExtResource( 19 )

[sub_resource type="Shader" id=5]
code = "
shader_type canvas_item;

uniform float offset = 1f;

void fragment(){
	vec4 green_channel = texture(SCREEN_TEXTURE, SCREEN_UV);
	vec4 red_channel = texture(SCREEN_TEXTURE, vec2(SCREEN_UV.x + (offset * SCREEN_PIXEL_SIZE.x), SCREEN_UV.y));
	vec4 blue_channel = texture(SCREEN_TEXTURE, vec2(SCREEN_UV.x - (offset * SCREEN_PIXEL_SIZE.x), SCREEN_UV.y));
	COLOR = vec4(red_channel.r, green_channel.g, blue_channel.b, 1f);
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/offset = 1.25

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 66.0931, 170.616 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 12 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 30.4213, 88.6552 )

[sub_resource type="DynamicFont" id=10]
size = 64
outline_size = 2
font_data = ExtResource( 4 )

[node name="Forest" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="ColorCorrection" type="CanvasModulate" parent="."]
position = Vector2( 54, -21 )
color = Color( 0.658824, 0.619608, 0.588235, 1 )

[node name="SoundsBackground" type="Node" parent="."]

[node name="BckgMusic" type="AudioStreamPlayer" parent="SoundsBackground"]
pause_mode = 2
stream = ExtResource( 1 )
volume_db = -15.0
pitch_scale = 0.8
autoplay = true

[node name="BckgAmbient2" type="AudioStreamPlayer" parent="SoundsBackground"]
pause_mode = 2
stream = ExtResource( 2 )
volume_db = -22.0
autoplay = true

[node name="PanelBottom" type="Panel" parent="."]
material = SubResource( 2 )
margin_left = -863.0
margin_top = 250.306
margin_right = 467.0
margin_bottom = 478.306
rect_scale = Vector2( 1.32, 0.92857 )
rect_pivot_offset = Vector2( 512.936, 75.3163 )
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBottom2" type="Panel" parent="."]
material = SubResource( 2 )
margin_left = -863.0
margin_top = -345.0
margin_right = 467.0
margin_bottom = -57.0
rect_scale = Vector2( 1.32, 0.92857 )
rect_pivot_offset = Vector2( 512.936, 75.3163 )
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 447.865, 142.203 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 3.66693, -75 )
current = true
limit_left = -870
limit_right = 650
smoothing_enabled = true
smoothing_speed = 4.0

[node name="Vignette" type="CanvasLayer" parent="Player/Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Player/Camera2D/Vignette"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ChromaticAberration" type="CanvasLayer" parent="Player/Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Player/Camera2D/ChromaticAberration"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( -696.238, 785.158 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="decor_objects" type="Node2D" parent="."]

[node name="collide_objects" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="collide_objects"]
position = Vector2( -815.229, 91.5282 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="collide_objects/StaticBody2D"]
shape = SubResource( 7 )

[node name="StaticBody2D2" type="StaticBody2D" parent="collide_objects"]
position = Vector2( 729.945, 91.5282 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="collide_objects/StaticBody2D2"]
shape = SubResource( 7 )

[node name="interact_objects" type="Node2D" parent="."]
z_index = -1

[node name="note" parent="interact_objects" instance=ExtResource( 9 )]
position = Vector2( 138.106, 150.89 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="NoteCanvas" type="NinePatchRect" parent="UI"]
visible = false
margin_left = 59.5231
margin_top = 70.6206
margin_right = 443.523
margin_bottom = 636.621
texture = ExtResource( 10 )
region_rect = Rect2( 23.9391, 25.5505, 785.693, 210.529 )
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="UI/NoteCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_fonts/normal_font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 2
text = "День 2. Я все еще не понимаю где мы находимся. Кругом творится какая-то чертовщина, звуки отовсюду, туман который пахнет страхом... "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="VBoxContainer" parent="UI"]
pause_mode = 2
visible = false
margin_left = 117.737
margin_top = 31.5417
margin_right = 1157.74
margin_bottom = 695.541
custom_constants/separation = 30
alignment = 1
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="UI/Pause"]
margin_top = 204.0
margin_right = 1040.0
margin_bottom = 459.0
custom_constants/separation = -15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" parent="UI/Pause/Buttons" instance=ExtResource( 15 )]
margin_right = 1040.0

[node name="ExitToMainButton" parent="UI/Pause/Buttons" instance=ExtResource( 14 )]
margin_top = 120.0
margin_right = 1040.0
margin_bottom = 255.0

[node name="MenuClick" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 16 )
pitch_scale = 1.7

[node name="StairSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
pitch_scale = 1.7

[node name="MiniGame" parent="." instance=ExtResource( 18 )]
visible = false
position = Vector2( -1151.85, 57.3887 )

[node name="levelArea" type="Area2D" parent="."]
position = Vector2( 571.044, 103.61 )
script = ExtResource( 5 )
scene_to_load = "res://src/levels/attic.tscn"
sound = "stair"

[node name="CollisionShape2D" type="CollisionShape2D" parent="levelArea"]
shape = SubResource( 9 )

[node name="QuestionMark" type="Label" parent="levelArea"]
visible = false
margin_left = -10.1744
margin_top = -149.504
margin_right = 13.8256
margin_bottom = -98.5038
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelArea2" type="Area2D" parent="."]
position = Vector2( 443.561, 103.61 )
script = ExtResource( 5 )
scene_to_load = "res://src/levels/badroom.tscn"
sound = "door"

[node name="CollisionShape2D" type="CollisionShape2D" parent="levelArea2"]
shape = SubResource( 9 )

[node name="QuestionMark" type="Label" parent="levelArea2"]
visible = false
margin_left = -10.1744
margin_top = -149.504
margin_right = 13.8256
margin_bottom = -98.5038
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelArea3" type="Area2D" parent="."]
position = Vector2( -634.549, 103.61 )
monitoring = false
script = ExtResource( 5 )
scene_to_load = "res://src/levels/village.tscn"
sound = "door"

[node name="CollisionShape2D" type="CollisionShape2D" parent="levelArea3"]
shape = SubResource( 9 )

[node name="QuestionMark" type="Label" parent="levelArea3"]
visible = false
margin_left = -10.1744
margin_top = -149.504
margin_right = 13.8256
margin_bottom = -98.5038
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="earlyArea" type="Area2D" parent="."]
position = Vector2( -634.094, 103.61 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="earlyArea"]
visible = false
shape = SubResource( 9 )

[node name="QuestionMark" type="Label" parent="earlyArea"]
visible = false
margin_left = -10.1744
margin_top = -149.504
margin_right = 13.8256
margin_bottom = -98.5038
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="room" type="Sprite" parent="."]
position = Vector2( -171.75, 91.0816 )
scale = Vector2( 1, 1.02673 )
z_index = -1
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 0, 50, 1711, 320 )

[node name="Grandma" parent="." instance=ExtResource( 20 )]
position = Vector2( -52.1273, 147.71 )

[connection signal="body_entered" from="levelArea" to="levelArea" method="_on_levelArea_body_entered"]
[connection signal="body_exited" from="levelArea" to="levelArea" method="_on_levelArea_body_exited"]
[connection signal="body_entered" from="levelArea2" to="levelArea2" method="_on_levelArea_body_entered"]
[connection signal="body_exited" from="levelArea2" to="levelArea2" method="_on_levelArea_body_exited"]
[connection signal="body_entered" from="levelArea3" to="levelArea3" method="_on_levelArea_body_entered"]
[connection signal="body_exited" from="levelArea3" to="levelArea3" method="_on_levelArea_body_exited"]
[connection signal="body_entered" from="earlyArea" to="earlyArea" method="_on_earlyArea_body_entered"]
[connection signal="body_exited" from="earlyArea" to="earlyArea" method="_on_earlyArea_body_exited"]
